syntax = "proto3";

package userpb.v1;

option go_package = "pkg/userpb";

enum UserType {
    USER_TYPE_ADMIN = 0;
    USER_TYPE_OPERATION = 1;
    USER_TYPE_NORMAL = 2;
    USER_TYPE_VISITOR = 3;
}

message NewUser {
    string name = 1;
    int32 age = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
}


message GetUsersParams {

}

message UserList {
   repeated User users = 1;
}